Efmub-Ogy/src/objects/PNR__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>PNRs</relationshipLabel>
        <relationshipName>PNRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flight_Leg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flight Leg</label>
        <referenceTo>Flight_Leg__c</referenceTo>
        <relationshipLabel>PNRs</relationshipLabel>
        <relationshipName>PNRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Locator__c</fullName>
        <label>Record Locator</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>PNR</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PNR-{00000000}</displayFormat>
        <label>PNR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PNRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Record_Locator_Format</fullName>
        <active>true</active>
        <description>Record Locator must be 6 alphanumeric characters only</description>
        <errorConditionFormula>OR(
LEN(Record_Locator__c) &lt;&gt; 6,
NOT(REGEX( Record_Locator__c ,&quot;^[a-zA-Z0-9_]*$&quot;))
)</errorConditionFormula>
        <errorMessage>Record Locator must be 6 alphanumeric characters only</errorMessage>
    </validationRules>
</CustomObject>